writ-compiler/tests/snapshots/lowering_tests__dlg_loc_key_duplicate_collision.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: "(ast, errors)"
---
(
    Ast {
        items: [
            Fn(
                AstFnDecl {
                    attrs: [],
                    vis: None,
                    name: "intro",
                    name_span: 4..9,
                    generics: [],
                    params: [],
                    return_type: None,
                    body: [
                        Let {
                            mutable: false,
                            name: "_narrator",
                            name_span: 15..23,
                            ty: None,
                            value: GenericCall {
                                callee: MemberAccess {
                                    object: Ident {
                                        name: "Entity",
                                        span: 15..23,
                                    },
                                    field: "getOrCreate",
                                    field_span: 15..23,
                                    span: 15..23,
                                },
                                type_args: [
                                    Named {
                                        name: "Narrator",
                                        span: 15..23,
                                    },
                                ],
                                args: [],
                                span: 15..23,
                            },
                            span: 15..23,
                        },
                        Expr {
                            expr: Call {
                                callee: Ident {
                                    name: "say_localized",
                                    span: 14..37,
                                },
                                args: [
                                    AstArg {
                                        name: None,
                                        value: Ident {
                                            name: "_narrator",
                                            span: 15..23,
                                        },
                                        span: 14..37,
                                    },
                                    AstArg {
                                        name: None,
                                        value: StringLit {
                                            value: "greet",
                                            span: 14..37,
                                        },
                                        span: 14..37,
                                    },
                                    AstArg {
                                        name: None,
                                        value: StringLit {
                                            value: "Hello.",
                                            span: 24..30,
                                        },
                                        span: 14..37,
                                    },
                                ],
                                span: 14..37,
                            },
                            span: 14..37,
                        },
                        Expr {
                            expr: Call {
                                callee: Ident {
                                    name: "say_localized",
                                    span: 38..59,
                                },
                                args: [
                                    AstArg {
                                        name: None,
                                        value: Ident {
                                            name: "_narrator",
                                            span: 39..47,
                                        },
                                        span: 38..59,
                                    },
                                    AstArg {
                                        name: None,
                                        value: StringLit {
                                            value: "greet",
                                            span: 38..59,
                                        },
                                        span: 38..59,
                                    },
                                    AstArg {
                                        name: None,
                                        value: StringLit {
                                            value: "Bye.",
                                            span: 48..52,
                                        },
                                        span: 38..59,
                                    },
                                ],
                                span: 38..59,
                            },
                            span: 38..59,
                        },
                    ],
                    span: 0..61,
                },
            ),
        ],
    },
    [
        DuplicateLocKey {
            key: "greet",
            first_span: 32..37,
            second_span: 54..59,
        },
    ],
)
