writ-compiler/tests/snapshots/lowering_tests__dlg_namespace_multi_segment_in_loc_key.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Namespace(
            Block {
                path: [
                    "a",
                    "b",
                ],
                items: [
                    Fn(
                        AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "greet",
                            name_span: 21..26,
                            generics: [],
                            params: [
                                Regular(
                                    AstParam {
                                        name: "player",
                                        name_span: 27..33,
                                        ty: Named {
                                            name: "Entity",
                                            span: 35..41,
                                        },
                                        span: 27..41,
                                    },
                                ),
                            ],
                            return_type: None,
                            body: [
                                Expr {
                                    expr: Call {
                                        callee: Ident {
                                            name: "say",
                                            span: 45..65,
                                        },
                                        args: [
                                            AstArg {
                                                name: None,
                                                value: Ident {
                                                    name: "player",
                                                    span: 46..52,
                                                },
                                                span: 45..65,
                                            },
                                            AstArg {
                                                name: None,
                                                value: StringLit {
                                                    value: "Hello there.",
                                                    span: 53..65,
                                                },
                                                span: 45..65,
                                            },
                                        ],
                                        span: 45..65,
                                    },
                                    span: 45..65,
                                },
                            ],
                            span: 17..67,
                        },
                    ),
                ],
                span: 0..69,
            },
        ),
    ],
}
